<resources>
    <string name="app_name">Friendly Reminder</string>

    <!-- menu items -->
    <string name="action_settings">Settings</string>
    <string name="action_sort_by">Sort by</string>
    <string name="sub_action_sort_by_daysUntilAlert">Time Until Alert</string>
    <string name="sub_action_sort_by_daysPassed">Time Passed</string>
    <string name="sub_action_sort_by_alphabet">Title</string>
    <string name="sub_action_sort_ascending">Ascending</string>
    <string name="sub_action_sort_descending">Descending</string>

    <string name="action_clear_all_data">Clear all data</string>
    <string name="action_change_theme">Dark Theme</string>

    <!-- dialog messages -->
    <string name="title_new">Enter Title</string>
    <string name="title_change">Change Title</string>
    <string name="days_until_change">Set Days Until Reminder</string>
    <string name="interval_change">Set Interval</string>
    <string name="time_of_day_change">Set Time Of Day</string>
    <string name="days_passed_change">Set days passed</string>
    <string name="confirmation_msg_delete_item">Are you sure you want to delete?</string>
    <string name="confirmation_title_clear_all">Clear all data</string>
    <string name="confirmation_msg_clear_all1">Are you sure?"</string>
    <string name="confirmation_msg_clear_all2">This can not be undone!</string>

    <string name="dialog_btn_positve">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>

    <!-- Toast messages -->
    <string name="set_alert">Set Reminder To:</string>
    <string name="alert_in_past">Reminder cannot be set in past</string>
    <string name="no_title">Please enter title</string>
    <string name="item_deleted">Item deleted</string>
    <string name="data_cleared">All data cleared</string>



    <!-- List item strings -->
    <string name="alert_time_of_day_first_part">at</string>
    <string name="alert_first_part">in</string>
    <string name="alert_multi_days_until">days</string>
    <string name="alert_one_day_until">Tomorrow</string>
    <string name="alert_today">Today</string>
    <string name="alert_one_day_ago">Yesterday</string>
    <string name="alert_multi_days_ago">days ago</string>
    <string name="alert_not_set">Not Set</string>

    <string name="interval_not_set">Interval</string>
    <string name="interval_one_day">day</string>
    <string name="interval_multi_days">days</string>

    <string name="btn_delete">Delete</string>

    <!-- notifications -->
    <string name="btn_restart">Restart</string>
    <string name="btn_plus_one_day">+ 1d</string>
    <string name="btn_plus_3h">+ 3h</string>


    <!-- intent actions -->
    <string name="alert">ACTION_ALERT</string>
    <string name="restart">ACTION_RESTART</string>
    <string name="restart_running">RESTART_RUNNING</string>
    <string name="disable_alert_active">DISABLE_RUNNING</string>
    <string name="plus_one_day">PLUS_ONE_DAY</string>



</resources>
