<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.multitimer.MainActivity">

  <!--
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_throw_notification"
        android:orderInCategory="100"
        android:title="Throw Notification"
        app:showAsAction="never" />
        -->

    <item
        android:id="@+id/action_sort_by"
        android:orderInCategory="100"
        android:title="@string/action_sort_by"
        app:showAsAction="never" >

        <menu>
            <group android:id="@+id/sort_mode" >
            <item
                android:id="@+id/sub_action_sort_by_daysUntilAlert"
                android:title="@string/sub_action_sort_by_daysUntilAlert"
                android:checkable="true"
                app:showAsAction="never"/>

            <item
                android:id="@+id/sub_action_sort_by_daysPassed"
                android:title="@string/sub_action_sort_by_daysPassed"
                android:checkable="true"
                app:showAsAction="never"/>
            <item
                android:id="@+id/sub_action_sort_by_alphabet"
                android:title="@string/sub_action_sort_by_alphabet"
                android:checkable="true"
                app:showAsAction="never"/>

            </group>

            <group android:id="@+id/sort_direction" android:checkableBehavior="single">

            <item
                android:id="@+id/sub_action_sort_ascending"
                android:title="@string/sub_action_sort_ascending"
                android:checkable="true"
                app:showAsAction="never"/>

            <item
                android:id="@+id/sub_action_sort_descending"
                android:title="@string/sub_action_sort_descending"
                android:checkable="true"
                app:showAsAction="never"/>


            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_clear_all_data"
        android:orderInCategory="100"
        android:title="@string/action_clear_all_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_theme"
        android:orderInCategory="100"
        android:title="@string/action_change_theme"
        android:checkable="true"
        app:showAsAction="never" />

</menu>
